# IndieStudio

./: Blender_multiobj.py  CMakeLists.txt  LICENSE  README.md
Assets/BigCity/: BigCityRoad_1.mtl  BigCityRoad_2.mtl  BigCity_1.mtl  BigCity_2.mtl
Assets/BigCity/texture/: DiffuseLayeredTexture_Composite.tga
Assets/car/SV/: SV.mtl  SV_blue.mtl  SV_green.mtl  SV_orange.mtl  SV_pink.mtl  SV_tire_back_right.mtl  SV_tire_front_right.mtl  SV_white.mtl  SV_yellow.mtl
Assets/misc/: error.xml  menu.xml  try.xml
CMake/: config.h.in
NetworkData/samples_input/: car_engine.txt  car_steering.txt  or_gate.txt
NetworkData/samples_save/: car_engine.txt  car_steering.txt  or_gate.txt
ServerJS/: index.js  package.json
ServerJS/Event/: forward.js  join_room.js  login.js  race.js  utils.js
ServerJS/extension/: string.js
ServerJS/schema/: Clients.js  Races.js  Rooms.js
includes/: AGame.hpp  AGameCamera.hpp  AGameObject.hpp  AModelObject.hpp  APhysicObject.hpp  BasicCamera.hpp  Circuit.hpp  DeltaTimer.hpp  EventDelegate.hpp  EventReceiver.hpp  GameCameraFPS.hpp  GameCheckpoint.hpp  IGame.hpp  IGameObject.hpp  IndieGame.hpp  KeyboardManager.hpp  Minimap.hpp  NetworkEventBridge.hpp  Race.hpp  RandomEvent.hpp  SizeS.hpp  SoundManager.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp
includes/BulletAnimator/: CBulletPhysics.h  CBulletPhysicsAnimator.h  CBulletPhysicsUtils.h  CDebugNode.h  PhysicsCar.h  PhysicsObject.h  SPhysicsCarParams.h  SPhysicsParams.h
includes/CarSystem/: AICar.hpp  Car.hpp  GroundMaterial.hpp  LearningCar.hpp  NetworkCar.hpp  carWatcher.hpp  loadCar.h
includes/Client/: Client.hpp
includes/GUI/: Audio.hpp  Classement.hpp  Concessionnaire.hpp  Course.hpp  Garage.hpp  Graphic.hpp  IGUI.hpp  JoinServer.hpp  Keyboard.hpp  MainMenu.hpp  Menu.hpp  Settings.hpp
includes/NeuralNetwork/: ANetworkData.hpp  GeneticPool.hpp  GeneticTrainer.hpp  Genome.hpp  Layer.hpp  Network.hpp  NetworkException.hpp  NetworkTrainer.hpp  Neuron.hpp
lib/boost_1_64_0/lib/LINUX/: libboost_atomic.so.1.64.0  libboost_container.so.1.64.0  libboost_context.so.1.64.0  libboost_coroutine.so.1.64.0  libboost_date_time.so.1.64.0  libboost_graph.so.1.64.0  libboost_iostreams.so.1.64.0  libboost_log_setup.so.1.64.0  libboost_math_c99.so.1.64.0  libboost_math_c99f.so.1.64.0  libboost_math_c99l.so.1.64.0  libboost_prg_exec_monitor.so.1.64.0  libboost_serialization.so.1.64.0  libboost_signals.so.1.64.0  libboost_system.so.1.64.0  libboost_timer.so.1.64.0  libboost_wave.so.1.64.0  libboost_wserialization.so.1.64.0
lib/boost_1_64_0/lib/OSX/: libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_context.dylib  libboost_coroutine.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_graph.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_log.dylib  libboost_log_setup.dylib  libboost_math_c99.dylib  libboost_math_c99f.dylib  libboost_math_c99l.dylib  libboost_math_tr1.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l.dylib  libboost_numpy.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options.dylib  libboost_python.dylib  libboost_random.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_signals.dylib  libboost_system.dylib  libboost_thread.dylib  libboost_timer.dylib  libboost_type_erasure.dylib  libboost_unit_test_framework.dylib  libboost_wave.dylib  libboost_wserialization.dylib
server/: Makefile
server/inc/: Client.hh  ClientSocket.hh  Database.hh  GameManager.hh  Group.hh  Message.hh  Race.hh  Server.hh  ServerSocket.hh  Socket.hh  SocketInclude.hh
server/src/: Client.cpp  ClientSocket.cpp  GameManager.cpp  Group.cpp  Message.cpp  Race.cpp  Server.cpp  ServerSocket.cpp  Socket.cpp  main.cpp
sources/: AGame.cpp  AGameCamera.cpp  AGameObject.cpp  AModelObject.cpp  APhysicObject.cpp  BasicCamera.cpp  Circuit.cpp  EventReceiver.cpp  GameCameraFPS.cpp  GameCheckpoint.cpp  IndieGame.cpp  KeyboardManager.cpp  Minimap.cpp  NetworkEventBridge.cpp  Race.cpp  RandomEvent.cpp  SizeS.cpp  SoundManager.cpp  Vector2.cpp  Vector3.cpp  main.cpp
sources/BulletAnimator/: CBulletPhysics.cpp  CBulletPhysicsAnimator.cpp  CBulletPhysicsUtils.cpp  CDebugNode.cpp  PhysicsCar.cpp  PhysicsObject.cpp  main2.cpp
sources/CarSystem/: AICar.cpp  Car.cpp  GroundMaterial.cpp  LearningCar.cpp  NetworkCar.cpp  carWatcher.cpp  loadCar.cpp
sources/Client/: Client.cpp
sources/GUI/: Audio.cpp  Classement.cpp  Concessionnaire.cpp  Course.cpp  Garage.cpp  Graphic.cpp  JoinServer.cpp  Keyboard.cpp  MainMenu.cpp  Menu.cpp  Settings.cpp
sources/NeuralNetwork/: ANetworkData.cpp  GeneticPool.cpp  GeneticTrainer.cpp  Genome.cpp  Network.cpp  NetworkTrainer.cpp  Neuron.cpp
